# iAI

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
img/weights/: ArgsComputeOfDeepNetwork.xlsm
source/: algorithm_install.md  dlFAQ.md  env_set.md  set.md  ss.md
source/tensorrt/tensorrt-3.0.4/: caffe_to_tensorrt.ipynb  manually_construct_tensorrt_engine.ipynb  tf_to_tensorrt.ipynb
source/tensorrt/tensorrt-4.0.1.6/: caffe_to_tensorrt.ipynb  manually_construct_tensorrt_engine.ipynb
src/: GL-iNet-AR750-官方固件安装SSR-Plus-插件.md  ai_algorithms.md  ai_base_env.md  ai_framework.md  ai_model_optimization.md  ai_server_FAQ.md  ai_tools.md  algorithm_install.md  ffmpeg.md  linux_env_set.md  linux_library.html  linux_library.md  nanopi-r1.md  openwrt.md  ss.md
src/LLMs/: llm_base.md
src/ai/: caffe.md  llms.md  loss-function.md  pytorch.md  pytorch_common.md  receptive_field.md  tensorflow.md  transfer-learning.md  weights.md
src/ai/caffe_protofiles/resnet-protofiles/: README.md  generator.py
src/ai/caffe_tools/: convert_binaryproto_to_npy.py  creat_caffe_filelist.sh  creat_caffe_lmdb_gray.sh  create_caffe_lmdb_rgb.sh  make_myself_mean.sh
src/ai/caffe_tools/parse_log/: plot.py
src/linux/shell/: shell.vsdx
src/softRoute/: softroute.md
src/tensorrt/tensorrt-3.0.4/: manually_construct_tensorrt_engine.ipynb  tf_to_tensorrt.ipynb
src/tensorrt/tensorrt-3.0.4/examples/: mnist_api.py
src/tensorrt/tensorrt-3.0.4/examples-pyhon/: googlenet.py  uff_mnist.py
src/tensorrt/tensorrt-3.0.4/examples-pyhon/caffe_to_trt/: caffe_mnist.py
src/tensorrt/tensorrt-3.0.4/examples-pyhon/custom_layers/: custom_layers.py
src/tensorrt/tensorrt-3.0.4/examples-pyhon/lite_examples/: caffe_lite_engine.py  tf_lite_engine.py
src/tensorrt/tensorrt-3.0.4/examples-pyhon/tf_to_trt/: tf_to_trt.py
src/tensorrt/tensorrt-3.0.4/examples/lite_examples/: plan_lite_engine.py
src/tensorrt/tensorrt-3.0.4/examples/resnet_as_a_service/: resnet_as_a_service.py
src/tensorrt/tensorrt-3.0.4/examples/tf_to_trt/: lenet5.py
src/tensorrt/tensorrt-3.0.4/samples-cpp/: Makefile  Makefile.config
src/tensorrt/tensorrt-3.0.4/samples-cpp/getDigits/: README.txt
src/tensorrt/tensorrt-3.0.4/samples-cpp/giexec/: Makefile  giexec.cpp
src/tensorrt/tensorrt-3.0.4/samples-cpp/sampleCharRNN/: Makefile  common.cpp  sampleCharRNN.cpp
src/tensorrt/tensorrt-3.0.4/samples-cpp/sampleFasterRCNN/: Makefile  common.h  sampleFasterRCNN.cpp
src/tensorrt/tensorrt-3.0.4/samples-cpp/sampleGoogleNet/: sampleGoogleNet.cpp
src/tensorrt/tensorrt-3.0.4/samples-cpp/sampleINT8/: BatchStream.h  LegacyCalibrator.h  sampleINT8.cpp
src/tensorrt/tensorrt-3.0.4/samples-cpp/sampleMNISTAPI/: Makefile  sampleMNISTAPI.cpp
src/tensorrt/tensorrt-3.0.4/samples-cpp/samplePlugin/: Makefile  samplePlugin.cpp
src/tensorrt/tensorrt-3.0.4/samples-cpp/sampleUffMNIST/: sampleUffMNIST.cpp.backup
src/tensorrt/tensorrt-4.0.1.6/: manually_construct_tensorrt_engine.ipynb  tf_to_tensorrt.ipynb
src/tensorrt/tensorrt-4.0.1.6/examples/: googlenet.py  mnist_api.py  onnx_mnist.py  uff_mnist.py
src/tensorrt/tensorrt-4.0.1.6/examples-python/caffe_to_trt/: caffe_mnist.py
src/tensorrt/tensorrt-4.0.1.6/examples-python/lite_examples/: plan_lite_engine.py
src/tensorrt/tensorrt-4.0.1.6/examples-python/pytorch_to_trt/: mnist.py  pytorch_to_trt.py
src/tensorrt/tensorrt-4.0.1.6/examples-python/tf_to_trt/: lenet5.py
src/tensorrt/tensorrt-4.0.1.6/examples/custom_layers/: custom_layers.py
src/tensorrt/tensorrt-4.0.1.6/examples/lite_examples/: caffe_lite_engine.py  pyt_lite_engine.py  tf_lite_engine.py
src/tensorrt/tensorrt-4.0.1.6/examples/resnet_as_a_service/: query.sh  resnet_as_a_service.py
src/tensorrt/tensorrt-4.0.1.6/examples/sample_onnx/: sample_onnx.py
src/tensorrt/tensorrt-4.0.1.6/examples/tf_to_trt/: tf_to_trt.py
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/: Makefile  Makefile.config
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/common/: sampleConfig.h
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/getDigits/: Makefile  download-digits-model.py
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/sampleCharRNN/: sampleCharRNN.cpp
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/sampleFasterRCNN/: README.txt  factoryFasterRCNN.h  sampleFasterRCNN.cpp
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/sampleGoogleNet/: Makefile  sampleGoogleNet.cpp
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/sampleINT8/: LegacyCalibrator.h  sampleINT8.cpp
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/sampleMNIST/: sampleMNIST.cpp
src/tensorrt/tensorrt-4.0.1.6/samples-cpp/sampleMNISTAPI/: sampleMNISTAPI.cpp
src/tensorrt/tensorrt-5.0.2.6/samples-python/: Makefile  Makefile.config
src/tensorrt/tensorrt-6.0.1.5/samples/: Makefile  Makefile.config
src/tensorrt/tensorrt-6.0.1.5/samples/common/: common.h  (+17 more)
src/tensorrt/tensorrt-6.0.1.5/samples/python/fc_plugin_caffe_mnist/: CMakeLists.txt  README.md  requirements.txt  sample.py
src/tensorrt/tensorrt-6.0.1.5/samples/python/fc_plugin_caffe_mnist/plugin/: FullyConnected.h  pyFullyConnected.cpp
src/tensorrt/tools/: tf_to_uff.py  uff_to_engine.py
src/tensorrt/tools/caffe_engine/: call_engine_to_infer.py  call_engine_to_infer_all.py  call_engine_to_infer_all_analysis_error_6classes.py  call_engine_to_infer_all_print_predict_on_image.py  call_engine_to_infer_all_print_predict_on_image_6classes.py  call_engine_to_infer_one.py
src/tensorrt/tools/call_caffe_engine_infer/: call_engine_to_infer.py
src/tensorrt/tools/gie_cpp/: common.h  gie.cpp  gie.hpp
src/tensorrt/tools/tensorflow_engine/: call_engine_to_infer_all.py  call_engine_to_infer_one.py  test_engine.py  tf_to_trt.py  tf_to_uff.py  uff_to_engine.py
src/tensorrt/tools/tensorrt_4_engine_using/: call_engine_to_infer_all.py  call_engine_to_infer_one.py
src/tensorrt/tools/tensorrt_7_engine_using/: call_engine_to_infer.py
src/tensorrt/tools/trt_cpp_caffe_model/: Makefile  common.cpp  main.cpp
src/tensorrt/tools/trt_cpp_tf_uff/: CMakeLists.txt  common.cpp  common.h  main.cpp
src/tmux/: tmux_cheatsheet.md  tmux_conf.md
src/tools/: gpu_occupier.py
src/vscode/: README.md
(+382 files in other folders)
